fix nav collapse

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,11 +41,10 @@
   color: #fff;
   background-color: #58e1c1; }
 
-@media (min-width: 481px) {
+@media (min-width: 769px) {
   .nav .nav__item {
     display: inline-block;
-    margin: 0 em(10px);
-    padding: 10px; } }
+    margin: 0 em(10px); } }
 
 [class^="btn--"] {
   max-width: 100%;
