--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -107,7 +107,7 @@
     }
   }
   @else if $break == "medium" {
-    @media (min-width: $brkpoint-md + 1) and (max-width: $brkpoint-lg - 1){
+    @media (min-width: $brkpoint-tablet) {
       @content;
     }
   }
