--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -93,6 +93,7 @@ $trans-duration  : .3s;
 // Breakpoints
 
 $brkpoint-sm    : 1px; // up to 480px
+$brkpoint-tablet: 769px;
 $brkpoint-md    : 480px; // up to 1399px
 $brkpoint-lg    : 1400px; // and so on...
 
